--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -1,16 +1,13 @@
 <ul class='nav metismenu sidebar-nav' id='side-menu'>
-	<li class='nav-header'>
+	<li class='nav-header sidebar-brand'>
 	    <div class='profile-element logo-horus'>
 	        Horus
 	    </div>
+	    <!--
 	    <div class='logo-element'>
 	        H
 	    </div>
-	</li>
-	<li class="sidebar-brand">
-		<a href="#">
-			Start Bootstrap
-		</a>
+	    -->
 	</li>
 	<li>
 	    <a href='index.html'>
