LESS files are now organized and commented. Also, some adjusts were done on the overall layout of the theme

--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -1,13 +1,6 @@
 <ul class='nav metismenu sidebar-nav' id='side-menu'>
-	<li class='nav-header sidebar-brand'>
-	    <div class='profile-element logo-horus'>
-	        Horus
-	    </div>
-	    <!--
-	    <div class='logo-element'>
-	        H
-	    </div>
-	    -->
+	<li class='nav-header'>
+	    Horus
 	</li>
 	<li>
 	    <a href='index.html'>
