--- a/src/html/parts/page-nav.html
+++ b/src/html/parts/page-nav.html
@@ -1,6 +1,6 @@
 <ul class='nav metismenu sidebar-nav' id='side-menu'>
 	<li class='nav-header'>
-	    Horus
+	    Logo
 	</li>
 	<li>
 	    <a href='index.html'>
