--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 <div class='row border-bottom'>
-	<nav class='navbar grey-bg tops' role='navigation' style='margin-bottom: 0'>
-		<a class='navbar-minimalize minimalize-styl-2 btn btn-primary' href='#'>
+	<nav class='navbar tops' role='navigation' style='margin-bottom: 0'>
+		<a class='btn btn-primary' href='#'>
 	    <i class='fa fa-bars'></i>
 	  </a>
 	  <ul class='nav navbar-top-links navbar-left'>
@@ -125,12 +125,12 @@
 	    <li class='dropdown profile-element'>
 	      <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
 	        <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
-	        <span class='m-t-xs'>
-	          <strong class='font-bold'>David Williams</strong>
+	        <span class=''>
+	          <strong class=''>David Williams</strong>
 	          <b class='caret'></b>
 	        </span>
 	      </a>
-	      <ul class='dropdown-menu animated fadeInRight m-t-xs'>
+	      <ul class='dropdown-menu animated'>
 	        <li>
 	          <a href='profile.html'>Profile</a>
 	        </li>
@@ -154,7 +154,7 @@
 </div>
 <div class='box_notice'>
 </div>
-<div class='row wrapper border-bottom white-bg page-heading'>
+<div class='row wrapper'>
   <div class='col-lg-10'>
     <h2>Listing Invoices</h2>
     <ol class='breadcrumb'>
@@ -171,6 +171,7 @@
   </div>
   <div class='col-lg-2'></div>
 </div>
+<!-- CONTENT -->
 <div class='wrapper wrapper-content'>
   <div class='row'>
     <div class='col-lg-12'>
@@ -422,6 +423,7 @@
     </div>
   </div>
 </div>
+<!-- FOOTER -->
 <div class='footer fixed'>
   <div class='pull-right'>
     <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
