Unused files removed

--- a/documentation/index.html
+++ b/documentation/index.html
@@ -6,8 +6,7 @@
 
     <title>Base Theme Documentation</title>
 
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="js/google-code-prettify/prettify.css" rel="stylesheet">
+    <link href="../bower_components/bootstrap/dist/css/bootstrap.css" rel="stylesheet">
 
     <style>
 
