--- a/src/html/list-reseller.html
+++ b/src/html/list-reseller.html
@@ -20,7 +20,7 @@
     </div>
     <div class='col-lg-2'></div>
   </div>
-    <div class='row'>
+    <div class='row'> 
       <div class='col-lg-12'>
         <div>
           <div>
@@ -28,11 +28,11 @@
               <h2>Companies</h2>
             </div>
             <div class='col-lg-4'></div>
-            <a class="btn btn-inverse" href="http://localhost:3004/admin/companies/new">Criar Company</a>
+            <a class="btn btn-inverse" href="#">Criar Company</a>
           </div>
           <div class='clearfix'>
             <div class='col-lg-8'>
-              <table class="table"><thead class=""><tr class=""><th class="">Name</th><th class="">Domain</th><th class="">Key name</th><th class="">Actions</th></tr></thead><tbody class=""><tr class=""><td class="">Foo Inc.</td><td class="">foo.localhost</td><td class="">KN_1</td><td class=""><a href="http://localhost:3004/admin/companies/1">Visualizar</a> <a href="http://localhost:3004/admin/companies/1/edit">Editar</a> <a data-confirm="Tem certeza que deseja excluir?" rel="nofollow" data-method="delete" href="http://localhost:3004/admin/companies/1">Excluir</a></td></tr><tr class=""><td class="">Acme Inc.</td><td class="">acme.localhost</td><td class="">KN_2</td><td class=""><a href="http://localhost:3004/admin/companies/2">Visualizar</a> <a href="http://localhost:3004/admin/companies/2/edit">Editar</a> <a data-confirm="Tem certeza que deseja excluir?" rel="nofollow" data-method="delete" href="http://localhost:3004/admin/companies/2">Excluir</a></td></tr><tr class=""><td class="">Linux Foo Inc.</td><td class="">foo.com</td><td class="">KN_3</td><td class=""><a href="http://localhost:3004/admin/companies/3">Visualizar</a> <a href="http://localhost:3004/admin/companies/3/edit">Editar</a> <a data-confirm="Tem certeza que deseja excluir?" rel="nofollow" data-method="delete" href="http://localhost:3004/admin/companies/3">Excluir</a></td></tr><tr class=""><td class="">Linux Acme Inc.</td><td class="">acme.com</td><td class="">KN_4</td><td class=""><a href="http://localhost:3004/admin/companies/4">Visualizar</a> <a href="http://localhost:3004/admin/companies/4/edit">Editar</a> <a data-confirm="Tem certeza que deseja excluir?" rel="nofollow" data-method="delete" href="http://localhost:3004/admin/companies/4">Excluir</a></td></tr></tbody></table>
+              <table class="table"><thead><tr><th>Name</th><th>Domain</th><th>Key name</th><th>Actions</th></tr></thead><tbody><tr><td>Foo Inc.</td><td>foo.localhost</td><td>KN_1</td><td><a href="#">Visualizar</a> <a href="#">Editar</a> <a href="#">Excluir</a></td></tr><tr><td>Acme Inc.</td><td>acme.localhost</td><td>KN_2</td><td><a href="#">Visualizar</a> <a href="#">Editar</a> <a href="#">Excluir</a></td></tr><tr><td>Linux Foo Inc.</td><td>foo.com</td><td>KN_3</td><td><a href="#">Visualizar</a> <a href="#">Editar</a> <a href="#">Excluir</a></td></tr><tr><td>Linux Acme Inc.</td><td>acme.com</td><td>KN_4</td><td><a href="#">Visualizar</a> <a href="#">Editar</a> <a href="#">Excluir</a></td></tr></tbody></table>
               
             </div>
             <div class='col-lg-4'>
@@ -44,7 +44,7 @@
                   </h3>
                 </div>
                 <div class='panel-body'>
-                  <form novalidate="novalidate" class="simple_form new_q" id="new_q" action="http://localhost:3004/admin/companies" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" /><div class="form-group string required q_name_cont"><label class="string required control-label" for="q_name_cont"><abbr title="necessário">*</abbr> Nome Contém...</label><input class="string required form-control" type="text" name="q[name_cont]" id="q_name_cont" /></div>
+                  <form><input type="hidden" value="&#x2713;" /><div class="form-group string required"><label class="string required control-label"><abbr title="necessário">*</abbr> Nome Contém...</label><input class="string required form-control" type="text"/></div>
                   <input type="submit" name="commit" value="Buscar" class="btn btn-default" />
                   </form>
                 </div>
