--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -46,7 +46,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="box_category">
           <div class="box_icon">
-            <span class="glyphicon glyphicon-envelope"></span>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -60,7 +60,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="box_category">
           <div class="box_icon">
-            <span class="glyphicon glyphicon-envelope"></span>
+            <i class="fa fa-envelope-o"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -74,7 +74,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="box_category">
           <div class="box_icon">
-            <span class="glyphicon glyphicon-envelope"></span>
+            <i class="fa fa-file-text-o"></i>
           </div>
           <div class="box_desc">
             <h3>
