adding first pag of shop

--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -5,8 +5,7 @@
 <div id="page-menu">
   <div class="container clearfix">
     <div class="menu_page_title">
-      Produtos
-      <span>Zertico</span>
+      <span>Store</span>
     </div>
     <nav>
       <ul>
