--- a/src/html/servers.html
+++ b/src/html/servers.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/application.html' %}
+{% extends 'layouts/shop.html' %}
 
 {% block content %}
 
@@ -46,7 +46,7 @@
             <div class="col-sm-6 col-md-4">
               <div class="box_group">
                 <div class="box_icon_group">
-                  <a href="/br/shop/servers/cloud-servers"><i class="icon-cloud2"></i>
+                  <a href="/br/shop/servers/cloud-servers"><i class="fa fa-cloud"></i>
                   </a>
                 </div>
                 <h3>Cloud Servers</h3>
@@ -56,7 +56,7 @@
             <div class="col-sm-6 col-md-4">
               <div class="box_group">
                 <div class="box_icon_group">
-                  <a href="/br/shop/servers/bare-metal"><i class="icon-cloud"></i>
+                  <a href="/br/shop/servers/bare-metal"><i class="fa fa-cloud"></i>
                   </a>
                 </div>
                 <h3>Bare Metal</h3>
