Pages created and improvements were done

--- a/src/html/companies-settings.html
+++ b/src/html/companies-settings.html
@@ -392,7 +392,7 @@
 <div class='footer fixed'>
     <div class='pull-right'>
         <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
+        <a class="btn btn-default" href="#" role="button" style="margin-right: 20px;">Feedback</a>
         <span class='text-muted'>Contato</span>
     </div>
     <div>
