--- a/src/html/parts/footer.html
+++ b/src/html/parts/footer.html
@@ -1,192 +1,80 @@
-<footer id="footer" class="not-dark">
+<div class="big-footer">
     <div class="container">
-      <!--
-        Footer widgets
-        =============================================
-      -->
-      <div class="footer-widgets-wrap clearfix">
-        <div class="col_two_third">
-          <div class="widget clearfix">
-            <img style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #4A4A4A;" src="/assets/images/footer-widget-logo.png" class="alignleft" alt="">
-            <p>
-              Acreditamos em soluções de Cloud Computing
-              <strong>simples</strong>,
-              <strong>confiáveis</strong>
-              e de alto
-              <strong>desempenho.</strong>
-              Conheça o que temos a lhe oferecer.
-            </p>
-            <div style="margin: 30px 0;" class="line"></div>
-            <div class="row">
-              <div class="col-md-3 col-sm-6 bottommargin-sm widget_links">
-                <ul>
-                  <li>
-                    <a href="#">Servidores Dedicados</a>
-                  </li>
-                  <li>
-                    <a href="#">Servidores Virtuais</a>
-                  </li>
-                  <li>
-                    <a href="#">Software</a>
-                  </li>
-                  <li>
-                    <a href="#">Armazenamento</a>
-                  </li>
-                  <li>
-                    <a href="#">CDN</a>
-                  </li>
-                  <li>
-                    <a href="#">Backup</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-3 col-sm-6 bottommargin-sm widget_links">
-                <ul>
-                  <li>
-                    <a href="#">Datacenters</a>
-                  </li>
-                  <li>
-                    <a href="#">Rede Tripla</a>
-                  </li>
-                  <li>
-                    <a href="#">Automação</a>
-                  </li>
-                  <li>
-                    <a href="#">API</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-3 col-sm-6 bottommargin-sm widget_links">
-                <ul>
-                  <li>
-                    <a href="#">Marketing Digital</a>
-                  </li>
-                  <li>
-                    <a href="#">E-commerce</a>
-                  </li>
-                  <li>
-                    <a href="#">Cloud Privada</a>
-                  </li>
-                  <li>
-                    <a href="#">Soluções de Hospedagem</a>
-                  </li>
-                </ul>
-              </div>
-              <div class="col-md-3 col-sm-6 bottommargin-sm widget_links">
-                <ul>
-                  <li>
-                    <a href="#">Programa de Afiliados</a>
-                  </li>
-                  <li>
-                    <a href="#">Programa de Revendas</a>
-                  </li>
-                  <li>
-                    <a href="#">Marketplace</a>
-                  </li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col_one_third col_last">
-          <div class="widget subscribe-widget clearfix">
-            <h5>
-              <strong>Inscreva-se,</strong>
-              em nosso boletim para receber notícias da Zertico, do mundo Cloud e Ofertas
-            </h5>
-            <div id="widget-subscribe-form-result" data-notify-type="Inscrito com secesso!" data-notify-msg=""></div>
-            <form role="form" method="get" id="widget-subscribe-form" class="nobottommargin" action="/">
-              <div class="input-group divcenter">
-                <span class="input-group-addon">
-                  <i class="icon-email2"></i>
-                </span>
-                <input type="email" placeholder="Entre com seu email" id="widget-subscribe-form-email" class="form-control required email">
-                <span class="input-group-btn">
-                  <button type="submit" class="btn btn-success">Inscreva-se</button>
-                </span>
-              </div>
-            </form>
-          </div>
-          <div style="margin-bottom: -20px;" class="widget clearfix">
-            <div class="row">
-              <div class="col-md-6 clearfix bottommargin-sm">
-                <a style="margin-right: 10px;" href="#" class="social-icon si-dark si-colored si-facebook nobottommargin">
-                  <i class="icon-facebook"></i>
-                  <i class="icon-facebook"></i>
-                </a>
-                <a href="#">
-                  <small style="display: block;">
-                    <strong>Like us</strong>
-                    <br>On Facebook<br>
-                  </small>
-                </a>
-              </div>
-              <div class="col-md-6 clearfix">
-                <a style="margin-right: 10px;" href="#" class="social-icon si-dark si-colored si-rss nobottommargin">
-                  <i class="icon-rss"></i>
-                  <i class="icon-rss"></i>
-                </a>
-                <a href="#">
-                  <small style="display: block;">
-                    <strong>Subscribe</strong>
-                    <br>To RSS Feeds<br>
-                  </small>
-                </a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- .footer-widgets-wrap end -->
-    </div>
-    <!--
-      Copyrights
-      =============================================
-    -->
-    <div>
-      <div class="container clearfix">
         <div class="row">
-          <div class="col-sm-8">
-            <div class="clearfix">
-              <a href="#">Home</a>
-              /
-              <a href="#">Sobre nós</a>
-              /
-              <a href="#">Base de Conhecimento</a>
-              /
-              <a href="#">Privacidade</a>
+            <div class="col-lg-12">
+                <div class="big-footer-sep clearfix">
+                    <div class="col-lg-2">
+                        <h3 class="no-mg">Logo a</h3>
+                    </div>
+                    <div class="col-lg-10 slogan">
+                        <span>We believe in Simple, Creative & Flexible Design Standards.</span>
+                    </div>
+                </div>
             </div>
-            Copyright &copy; 2015 Zertico
-          </div>
-          <div class="col-sm-4 col_last tright">
-            <div class="clearfix">
-              <a href="https://twitter.com/zerticohosting" class="social-icon si-small si-borderless nobottommargin si-twitter">
-                <i class="icon-twitter"></i>
-                <i class="icon-twitter"></i>
-              </a>
-              <a href="https://github.com/zertico/" class="social-icon si-small si-borderless nobottommargin si-github">
-                <i class="icon-github"></i>
-                <i class="icon-github"></i>
-              </a>
-              <a href="https://www.facebook.com/zerticohosting" class="social-icon si-small si-borderless nobottommargin si-facebook">
-                <i class="icon-facebook"></i>
-                <i class="icon-facebook"></i>
-              </a>
-              <a href="https://www.linkedin.com/company/zertico" class="social-icon si-small si-borderless nobottommargin si-linkedin">
-                <i class="icon-linkedin"></i>
-                <i class="icon-linkedin"></i>
-              </a>
-              <a href="#" class="social-icon si-small si-borderless nobottommargin si-gplus">
-                <i class="icon-gplus"></i>
-                <i class="icon-gplus"></i>
-              </a>
-              <a href="https://vimeo.com/zertico" class="social-icon si-small si-borderless nobottommargin si-vimeo">
-                <i class="icon-vimeo"></i>
-                <i class="icon-vimeo"></i>
-              </a>
+            <div class="col-lg-9">
+                <div class="big-footer-sep clearfix">
+                    <div class="col-lg-3 big-footer-menu">
+                        <span>Produtos e Serviços</span>
+                        <ul>
+                            <li><i class="fa fa-angle-right"></i> Servidores Dedicados</li>
+                            <li><i class="fa fa-angle-right"></i> Servidores Virtuais</li>
+                            <li><i class="fa fa-angle-right"></i> Software</li>
+                            <li><i class="fa fa-angle-right"></i> Armazenamento</li>
+                            <li><i class="fa fa-angle-right"></i> CDN</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 big-footer-menu">
+                        <span>Soluções</span>
+                        <ul>
+                            <li><i class="fa fa-angle-right"></i> Marketing Digital</li>
+                            <li><i class="fa fa-angle-right"></i> E-commerce</li>
+                            <li><i class="fa fa-angle-right"></i> Cloud privada</li>
+                            <li><i class="fa fa-angle-right"></i> Soluções de Hospedagem</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 big-footer-menu">
+                        <span>Programa</span>
+                        <ul>
+                            <li><i class="fa fa-angle-right"></i> Programa de Fidelidade</li>
+                            <li><i class="fa fa-angle-right"></i> Programa de Revendas</li>
+                            <li><i class="fa fa-angle-right"></i> Marketplace</li>
+                        </ul>
+                    </div>
+                    <div class="col-lg-3 big-footer-menu">
+                        <span>Sobre nós</span>
+                        <ul>
+                            <li><i class="fa fa-angle-right"></i> A Zertico</li>
+                            <li><i class="fa fa-angle-right"></i> Parceria Softlayer</li>
+                            <li><i class="fa fa-angle-right"></i> Equipe</li>
+                            <li><i class="fa fa-angle-right"></i> Trabalhe conosco</li>
+                            <li><i class="fa fa-angle-right"></i> Contato</li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div class="col-lg-3 text-right">
+                <div class="big-footer-sep">
+                    <address>
+                        <strong>Headquarters:</strong><br>
+                        795 Folsom Ave, Suite 600<br>
+                        San Francisco, CA 94107<br>
+                    </address>
+                    <abbr title="Phone Number"><strong>Phone:</strong></abbr> (91) 8547 632521<br>
+                    <abbr title="Fax"><strong>Fax:</strong></abbr> (91) 11 4752 1433<br>
+                    <abbr title="Email Address"><strong>Email:</strong></abbr> info@canvas.com
+                </div>
+            </div>
         </div>
-      </div>
     </div>
-  </footer>
+</div>
+<footer id="footer">
+    <div class="copyrights">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-8">
+                    <h5>Copyright &copy; 2015 Zertico</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
