--- a/src/html/parts/header.html
+++ b/src/html/parts/header.html
@@ -1,124 +1,57 @@
-<header>
-  <div class="container clearfix">
-    <!-- #logo end -->
-    <!-- Primary Navigation ============================================= -->
-    <nav class="navbar-header navbar-default navbar-fixed-top">
-      <a href="#" class="navbar-brand">
-        <img src="#" alt="Logo">
-      </a>
-      <ul class="list-inline navbar-right">
-        <li>
-          <a>
-            <div>Produtos e Serviços</div>
-          </a>
-          <ul style="display: none;">
-            <li>
-              <a href="#">
-                <div>Servidores Dedicados</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Servidores Virtuais</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Software</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Armazenamento</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>CDN</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Backup</div>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="sub-menu">
-          <a href="#" class="sf-with-ul">
-            <div>Soluções</div>
-          </a>
-          <ul style="display: none;">
-            <li>
-              <a href="#">
-                <div>Marketing Digital</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>E-commerce</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Cloud Privada</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Soluções de Hospedagem</div>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li class="sub-menu">
-          <a href="#" class="sf-with-ul">
-            <div>Programa</div>
-          </a>
-          <ul style="display: none;">
-            <li>
-              <a href="#">
-                <div>Programa de Afiliados</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Programa de Revenda</div>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <div>Marketplace</div>
-              </a>
-            </li>
-          </ul>
-        </li>
-        <li>
-          <a href="#">
-            <div>Blog</div>
-          </a>
-        </li>
-        <li>
-          <a href="#">
-            <div>Sobre Nós</div>
-          </a>
-        </li>
-        <li>
-          <a href="/br/login" class="button-logins">
-            <div>
-              Login
-            </div>
-          </a>
-        </li>
-      </ul>
-      <!-- Top Cart ============================================= -->
-      <div id="top-cart">
-        <a id="top-cart-trigger" href="#">
-          <i class="icon-shopping-cart"></i>
-        </a>
-      </div>
-      <!-- #top-cart end -->
-    </nav>
-    <!-- #primary-menu end -->
-  </div>
+<header class="navbar navbar-default">
+    <div class="container clearfix">
+        <!-- #logo end -->
+        <!-- Primary Navigation ============================================= -->
+        <nav>
+            <a href="#" class="navbar-brand">
+                <img src="#" alt="Logo">
+            </a>
+            <ul class="list-inline navbar-right main-nav">
+                <li class="dropdown">
+                    <a href="#">Produtos e serviços</a>
+                    <ul style="display: none;">
+                        <li>
+                            <a href="#">Servidores Dedicados</a>
+                        </li>
+                        <li>
+                            <a href="#">Servidores Virtuais</a>
+                        </li>
+                        <li>
+                            <a href="#">Software</a>
+                        </li>
+                        <li>
+                            <a href="#">Armazenamento</a>
+                        </li>
+                        <li>
+                            <a href="#">CDN</a>
+                        </li>
+                        <li>
+                            <a href="#">Backup</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="sub-menu">
+                    <a href="#" class="sf-with-ul">Soluções</a>
+                </li>
+                <li class="sub-menu">
+                    <a href="#" class="sf-with-ul">Programa</a>
+                </li>
+                <li>
+                    <a href="#">Blog</a>
+                </li>
+                <li>
+                    <a href="#">Sobre Nós</a>
+                </li>
+                <li>
+                    <a class="login" href="/br/login" class="button-logins">Login</a>
+                </li>
+                <li class="shopping-cart">
+                    <a href="#">
+                        <i class="fa fa-shopping-cart"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <!-- #primary-menu end -->
+    </div>
 </header>
