Improvements were done on shops page

--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -71,10 +71,10 @@
                         <i class="fa fa-file-text-o"></i>
                     </div>
                     <div class="box_desc">
-                        <h3>
-              Office 365
-              <span>Toda sua empresa trabalhando em documentos ao mesmo tempo, em qualquer lugar.</span>
-            </h3>
+                            <h3>
+                              Office 365
+                              <span>Toda sua empresa trabalhando em documentos ao mesmo tempo, em qualquer lugar.</span>
+                            </h3>
                         <a href="http://foo.localhost:3004/br/shop/office-365" class="btn btn-default btn-inverse">Veja as Opções</a>
                     </div>
                 </div>
@@ -82,12 +82,14 @@
         </div>
         <br>
         <div class="promo_box">
-            <div class="container clearfix">
-                <h3>
-          Podemos lhe ajudar?
-        </h3>
-                <span>Ficaremos felizes em lhe auxiliar caso tenha alguma dúvida, entre e fale conosco</span>
-                <a class="promo_button">Contato</a>
+            <div class="container">
+                <div class="col-lg-10">
+                    <h3>Podemos lhe ajudar?</h3>
+                    <span>Ficaremos felizes em lhe auxiliar caso tenha alguma dúvida, entre e fale conosco</span>
+                </div>
+                <div class="col-lg-2">
+                    <a class="promo_button">Contato</a>
+                </div>
             </div>
         </div>
     </div>
