Small adjustments on general styling

--- a/src/html/shop.html
+++ b/src/html/shop.html
@@ -44,10 +44,10 @@
                     </div>
                     <div class="box_desc">
                         <h3>
-              Servers
-              <span>High Performance Server in a Class A Datacenter</span>
-            </h3>
-                        <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default btn-inverse">Veja as Opções</a>
+                          Servers
+                        </h3>
+                        <span>High Performance Server in a Class A Datacenter</span>
+                        <a href="#" class="btn btn-default btn-inverse">Veja as Opções</a>
                     </div>
                 </div>
             </div>
@@ -58,10 +58,10 @@
                     </div>
                     <div class="box_desc">
                         <h3>
-              E-mails
-              <span>Contas de e-mails, a forma mais prática e segura de comunicação.</span>
-            </h3>
-                        <a href="http://foo.localhost:3004/br/shop/emails" class="btn btn-default btn-inverse">Veja as Opções</a>
+                          E-mails
+                        </h3>
+                        <span>Contas de e-mails, a forma mais prática e segura de comunicação.</span>
+                        <a href="#" class="btn btn-default btn-inverse">Veja as Opções</a>
                     </div>
                 </div>
             </div>
@@ -71,11 +71,11 @@
                         <i class="fa fa-file-text-o"></i>
                     </div>
                     <div class="box_desc">
-                            <h3>
-                              Office 365
-                              <span>Toda sua empresa trabalhando em documentos ao mesmo tempo, em qualquer lugar.</span>
-                            </h3>
-                        <a href="http://foo.localhost:3004/br/shop/office-365" class="btn btn-default btn-inverse">Veja as Opções</a>
+                        <h3>
+                          Office 365
+                        </h3>
+                        <span>Toda sua empresa trabalhando em documentos ao mesmo tempo, em qualquer lugar.</span>
+                        <a href="#" class="btn btn-default btn-inverse">Veja as Opções</a>
                     </div>
                 </div>
             </div>
