adding Base theme

--- a/src/html/cloud-servers.html
+++ b/src/html/cloud-servers.html
@@ -28,7 +28,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -62,14 +62,14 @@
               <br>
               R$ 224,93
             </p>
-            <a href="/br/shop/cart/add/1" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/1" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -103,14 +103,14 @@
               <br>
               R$ 449,86
             </p>
-            <a href="/br/shop/cart/add/2" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/2" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -144,14 +144,14 @@
               <br>
               R$ 940,14
             </p>
-            <a href="/br/shop/cart/add/3" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/3" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -189,14 +189,14 @@
               <br>
               R$ 2.008,82
             </p>
-            <a href="/br/shop/cart/add/4" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/4" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -230,14 +230,14 @@
               <br>
               R$ 321,33
             </p>
-            <a href="/br/shop/cart/add/5" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/5" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -271,7 +271,7 @@
               <br>
               R$ 874,01
             </p>
-            <a href="/br/shop/cart/add/6" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/6" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
