Adding Pages for Groups

--- a/src/html/companies-groups-show.html
+++ b/src/html/companies-groups-show.html
@@ -155,7 +155,7 @@
         <span>Servers</span>
     </div>
     <div class="col-lg-3">
-        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
+        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Group</a>
         <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
     </div>
 </div>
@@ -244,7 +244,7 @@
             
             <div class="comp-s-item clearfix">
                 <div class='col-lg-4'>
-                    <h4>Enable Category</h4>
+                    <h4>Enable Group</h4>
                     <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
                 </div>
                 <div class="col-lg-8">
@@ -257,17 +257,14 @@
         <div class="col-lg-4">
             <div class="comp-s-item clearfix">
                 <div class="mt_20">
-                    <div class="box_category">
-                        <div class="box_icon">
+                    <div class="box_group">
+                        <div class="box_icon_group">
+                          <a href="/br/shop/servers/cloud-servers">
                             <i class="fa fa-cloud"></i>
+                          </a>
                         </div>
-                        <div class="box_desc">
-                            <h3>
-                                Servers
-                                <span>High Performance Server in a Class A Datacenter</span>
-                            </h3>
-                            <a href="http://foo.localhost:3004/br/shop/servers" class="btn btn-default btn-inverse">Veja as Opções</a>
-                        </div>
+                        <h3>Cloud Servers</h3>
+                        <p>Cloud Servers on SoftLayer, an IBM Company</p>
                     </div>
                 </div>
             </div>
