--- a/src/html/companies-categories-new.html
+++ b/src/html/companies-categories-new.html
@@ -171,13 +171,13 @@
       </div>
       <br>
       <br>
-      <form novalidate="novalidate" class="simple_form form-horizontal" id="" action="" method="post">
+      <form novalidate="novalidate" class="simple_form form-horizontal">
         <div class="form-group string required">
           <label class="col-sm-3 string required control-label" for="">
             <abbr title="Requerido">*</abbr> Name
           </label>
           <div class="col-sm-8">
-            <input type="text" id="name" class="string required form-control ember-view ember-text-field">
+            <input type="text" id="name" class="string required form-control">
           </div>
         </div>
         <div class="col-md-4 col-md-offset-7 text-right">
