Adding Base Theme

--- a/src/html/companies-categories.html
+++ b/src/html/companies-categories.html
@@ -147,16 +147,16 @@
 </div>
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Listing Invoices</h3>
+        <h3>Listing Categories</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Invoices</a>
+                <a>Categories</a>
             </li>
             <li class='active'>
-                <strong>Listing Invoices</strong>
+                <strong>Listing Categories</strong>
             </li>
         </ol>
     </div>
@@ -167,28 +167,24 @@
     <div class='row'>
         <div class='col-lg-10 companies'>
             <div class=''>
-                <h4>Companies</h4>
+                <h4>Categories</h4>
             </div>
             <div class="pull-right">
-                <button class="btn btn-default btn-inverse">New Company</button>
+                <button class="btn btn-default btn-inverse">New Category</button>
             </div>
             <br>
             <br>
             <div class="companies-item">
                 <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+                <a>Servers</a>
             </div>
             <div class="companies-item">
                 <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+                <a>Emais</a>
             </div>
             <div class="companies-item">
                 <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+                <a>Office 365</a>
             </div>
         </div>
     </div>
