--- a/src/html/companies-groups.html
+++ b/src/html/companies-groups.html
@@ -118,9 +118,9 @@
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
                     <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
                     <span class=''>
-                  <strong class=''>David Williams</strong>
-                  <b class='caret'></b>
-                </span>
+			      <strong class=''>David Williams</strong>
+			      <b class='caret'></b>
+			    </span>
                 </a>
                 <ul class='dropdown-menu animated'>
                     <li>
@@ -147,16 +147,16 @@
 </div>
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Listing Invoices</h3>
+        <h3>Listing Groups</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Invoices</a>
+                <a>Groups</a>
             </li>
             <li class='active'>
-                <strong>Listing Invoices</strong>
+                <strong>Listing Groups</strong>
             </li>
         </ol>
     </div>
@@ -167,28 +167,20 @@
     <div class='row'>
         <div class='col-lg-10 companies'>
             <div class=''>
-                <h4>Companies</h4>
+                <h4>Groups</h4>
             </div>
             <div class="pull-right">
-                <button class="btn btn-default btn-inverse">New Company</button>
+                <button class="btn btn-default btn-inverse">New Group</button>
             </div>
             <br>
             <br>
             <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+                <i class="fa fa-cloud"></i>
+                <a>Cloud Servers</a>
             </div>
             <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+                <i class="fa fa-cloud"></i>
+                <a>Bare Metal</a>
             </div>
         </div>
     </div>
