--- a/src/html/manage-themes.html
+++ b/src/html/manage-themes.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/application.html' %} {% block content %}
+{% extends 'layouts/admin.html' %} {% block content %}
 <section>
     <div class='row'>
         <div class='col-lg-10'>
