--- a/src/html/companies-categories-new.html
+++ b/src/html/companies-categories-new.html
@@ -118,9 +118,9 @@
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
                     <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
                     <span class=''>
-                  <strong class=''>David Williams</strong>
-                  <b class='caret'></b>
-                </span>
+			      <strong class=''>David Williams</strong>
+			      <b class='caret'></b>
+			    </span>
                 </a>
                 <ul class='dropdown-menu animated'>
                     <li>
@@ -147,51 +147,57 @@
 </div>
 <div class='row wrapper'>
     <div class='col-lg-10'>
-        <h3>Listing Invoices</h3>
+        <h3>Listing Categories</h3>
         <ol class='breadcrumb'>
             <li>
                 <a href='/'>Home</a>
             </li>
             <li>
-                <a>Invoices</a>
+                <a>Categories</a>
             </li>
             <li class='active'>
-                <strong>Listing Invoices</strong>
+                <strong>Listing Categories</strong>
             </li>
         </ol>
     </div>
     <div class='col-lg-2'></div>
 </div>
 <!-- CONTENT -->
-<div class='wrapper wrapper-content'>
-    <div class='row'>
-        <div class='col-lg-10 companies'>
-            <div class=''>
-                <h4>Companies</h4>
-            </div>
-            <div class="pull-right">
-                <button class="btn btn-default btn-inverse">New Company</button>
-            </div>
-            <br>
-            <br>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
-            </div>
+<div class="wrapper wrapper-content">
+  <div class="row">
+    <div class="col-lg-7">
+      <div class="">
+        <h4>New Category</h4>
+      </div>
+      <br>
+      <br>
+      <form novalidate="novalidate" class="simple_form form-horizontal">
+        <div class="form-group string required">
+          <label class="col-sm-3 string required control-label" for="">
+            <abbr title="Requerido">*</abbr> Name
+          </label>
+          <div class="col-sm-8">
+            <input type="text" id="name" class="string required form-control">
+          </div>
         </div>
+        <div class="col-md-4 col-md-offset-7 text-right">
+          <button id="save" class="btn btn-default btn-inverse" data-ember-action="493">Submit</button>
+        </div>
+      </form>
     </div>
+    <div class="col-lg-5 summary">
+      <h4>Summary</h4>
+      <br>
+      <div class="summary-group clearfix">
+        <div class="summary-label col-sm-5">
+          <span>Name</span> 
+        </div>
+        <div class="col-sm-7">
+          <span><!----></span> 
+        </div>  
+      </div>    
+    </div>
+  </div>
 </div>
 <!-- FOOTER -->
 <div class='footer fixed'>
