--- a/src/html/companies-groups-show.html
+++ b/src/html/companies-groups-show.html
@@ -118,9 +118,9 @@
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
                     <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
                     <span class=''>
-                  <strong class=''>David Williams</strong>
-                  <b class='caret'></b>
-                </span>
+            <strong class=''>David Williams</strong>
+            <b class='caret'></b>
+          </span>
                 </a>
                 <ul class='dropdown-menu animated'>
                     <li>
@@ -145,62 +145,149 @@
 </div>
 <div class='box_notice'>
 </div>
-<div class='row wrapper'>
-    <div class='col-lg-10'>
-        <h3>Listing Invoices</h3>
-        <ol class='breadcrumb'>
-            <li>
-                <a href='/'>Home</a>
-            </li>
-            <li>
-                <a>Invoices</a>
-            </li>
-            <li class='active'>
-                <strong>Listing Invoices</strong>
-            </li>
-        </ol>
+
+<!-- APP -->
+<div class='row wrapper backs'>
+    <div class='col-lg-4 go-back'>
+        <i class="fa fa-angle-left"></i>
     </div>
-    <div class='col-lg-2'></div>
+    <div class='col-lg-5 title'>
+        <span>Servers</span>
+    </div>
+    <div class="col-lg-3">
+        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Group</a>
+        <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+    </div>
 </div>
 <!-- CONTENT -->
-<div class='wrapper wrapper-content'>
+<div class='wrapper wrapper-content fix-padding-mini-dashs'>
     <div class='row'>
-        <div class='col-lg-10 companies'>
-            <div class=''>
-                <h4>Companies</h4>
+        <div class="col-lg-8">
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Name</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <div class="col-lg-8">
+                        <span>Current name</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <button class="pull-right btn btn-default btn-inverse">Edit name</button>
+                    </div>
+                </div>
             </div>
-            <div class="pull-right">
-                <button class="btn btn-default btn-inverse">New Company</button>
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Plans</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <button class="pull-right btn btn-primary">Edit Plans</button>
+                </div>
             </div>
-            <br>
-            <br>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Slug</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <div class="col-lg-8">
+                        <span>Current slug</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <button class="pull-right btn btn-default btn-inverse">Edit slug</button>
+                    </div>
+                </div>
             </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Description</h4>
+                    <small>Consectetur adipiscing. Lorem ipsum dolor sit amet elit. <a href="#" title="">Aenean ac magna.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <div class="col-lg-8">
+                        <span>High Performance Server in a Class A Datacenter</span>
+                    </div>
+                    <div class="col-lg-4">
+                        <button class="pull-right btn btn-default btn-inverse">Edit description</button>
+                    </div>
+                </div>
             </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+            <div class="comp-s-item border-bottom clearfix">
+                <div class='col-lg-4'>
+                    <h4>Icon</h4>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <div class="clearfix">
+                        <div class="col-sm-3">
+                            <span>Current Icon:</span>
+                        </div>
+                        <div class="col-sm-7">
+                            <i class="fa fa-cloud"></i>
+                        </div>
+                        <div class="pull-right">
+                            <button class="btn btn-default btn-inverse">Edit icon</button>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="form-group">
+                        <form class="simple_form form-horizontal form-group string required">
+                            <label class="col-sm-3 string required control-label">
+                                New icon: 
+                            </label>
+                            <div class="col-sm-7">
+                                <select class="form-control" style="font-family: 'FontAwesome', Helvetica;">
+                                    <option>Cloud - &#xf0c2;</option>
+                                    <option>Truck - &#xf0d1;</option>
+                                    <option>Plane - &#xf072;</option>
+                                    <option>Ship - &#xf21a;</option>
+                                    <option>Car - &#xf1b9;</option>
+                                </select>
+                            </div>
+                        </form>
+                    </div>
+                </div>
             </div>
-            <div class="companies-item">
-                <i class="fa fa-square"></i>
-                <span>Foo Inc</span>
+            
+            <div class="comp-s-item clearfix">
+                <div class='col-lg-4'>
+                    <h4>Enable Group</h4>
+                    <small>Lorem ipsum dolor sit amet, consectetur adipiscing elit. <a href="#" title="">Aenean ac magna ipsum.</a></small>
+                </div>
+                <div class="col-lg-8">
+                    <input type="checkbox" />
+                    <strong class="ml_10">Enabled</strong>
+                </div>
+            </div>
+        </div>
+        <!-- preview -->
+        <div class="col-lg-4">
+            <div class="comp-s-item clearfix">
+                <div class="mt_20">
+                    <div class="box_group">
+                        <div class="box_icon_group">
+                          <a href="/br/shop/servers/cloud-servers">
+                            <i class="fa fa-cloud"></i>
+                          </a>
+                        </div>
+                        <h3>Cloud Servers</h3>
+                        <p>Cloud Servers on SoftLayer, an IBM Company</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </div>
 <!-- FOOTER -->
 <div class='footer fixed'>
-    <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
-        <span class='text-muted'>Contato</span>
+    <div class='pull-right mini-menu'>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Dúvidas</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contato</a>
     </div>
-    <div>
+    <div class="copys pull-left">
         <span class='text-muted'>Copyright © 2015 Zertico</span>
     </div>
 </div>
