--- a/src/html/companies-settings.html
+++ b/src/html/companies-settings.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/application.html' %} {% block content %}
+{% extends 'layouts/admin.html' %} {% block content %}
 <div class='row border-bottom'>
     <nav class='navbar tops' role='navigation' style='margin-bottom: 0'>
         <a class='btn btn-default show-menu pull-left' href='#'>
@@ -118,9 +118,9 @@
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
                     <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
                     <span class=''>
-			      <strong class=''>David Williams</strong>
-			      <b class='caret'></b>
-			    </span>
+                  <strong class=''>David Williams</strong>
+                  <b class='caret'></b>
+                </span>
                 </a>
                 <ul class='dropdown-menu animated'>
                     <li>
