--- a/src/html/shop-plans.html
+++ b/src/html/shop-plans.html
@@ -1,6 +1,32 @@
 {% extends 'layouts/shop.html' %}
 
 {% block content %}
+
+<div id="page-menu">
+  <div class="container clearfix">
+    <div class="menu_page_title">
+      Produtos
+      <span>Zertico</span>
+    </div>
+    <nav>
+      <ul>
+        <li>
+          <a href="http://foo.localhost:3004/br/shop/servers">Servers</a>
+        </li>
+        <li>
+          <a href="http://foo.localhost:3004/br/shop/emails">E-mails</a>
+        </li>
+        <li>
+          <a href="http://foo.localhost:3004/br/shop/office-365">Office 365</a>
+        </li>
+      </ul>
+    </nav>
+    <div id="page-submenu-trigger">
+      <i class="icon-reorder"></i>
+    </div>
+  </div>
+</div>
+
 <section class="page_title">
   <div class="container clearfix">
     <h1>Servidores</h1>
@@ -28,7 +54,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -62,14 +88,14 @@
               <br>
               R$ 224,93
             </p>
-            <a href="/br/shop/cart/add/1" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/1" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -103,14 +129,14 @@
               <br>
               R$ 449,86
             </p>
-            <a href="/br/shop/cart/add/2" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/2" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -144,14 +170,14 @@
               <br>
               R$ 940,14
             </p>
-            <a href="/br/shop/cart/add/3" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/3" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -189,14 +215,14 @@
               <br>
               R$ 2.008,82
             </p>
-            <a href="/br/shop/cart/add/4" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/4" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -230,14 +256,14 @@
               <br>
               R$ 321,33
             </p>
-            <a href="/br/shop/cart/add/5" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/5" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
       <div class="col-sm-6 col-md-4">
         <div class="box_plan">
           <div class="box_icon_plan">
-            <i class="icon-cloud2"></i>
+            <i class="fa fa-cloud"></i>
           </div>
           <div class="box_desc">
             <h3>
@@ -271,7 +297,7 @@
               <br>
               R$ 874,01
             </p>
-            <a href="/br/shop/cart/add/6" class="btn btn-inverse">Adicionar ao Carrinho</a>
+            <a href="/br/shop/cart/add/6" class="btn btn-default btn-inverse">Adicionar ao Carrinho</a>
           </div>
         </div>
       </div>
