Small adjusts on companies categories/groups flow

--- a/src/html/companies-categories-show.html
+++ b/src/html/companies-categories-show.html
@@ -148,15 +148,32 @@
 
 <!-- APP -->
 <div class='row wrapper backs'>
-    <div class='col-lg-4 go-back'>
+    <div class='col-lg-3 go-back'>
         <i class="fa fa-angle-left"></i>
+        <span>Categories</span>
     </div>
     <div class='col-lg-5 title'>
         <span>Servers</span>
     </div>
-    <div class="col-lg-3">
+    <div class="col-lg-3 pull-right">
         <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
         <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+    </div>
+</div>
+<div class='row wrapper backs-nav'>
+    <div class='col-lg-6 col-lg-offset-3 comp-nav'>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-info"></i>
+                <span>Information</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>Groups</span>
+            </a>
+        </div>
     </div>
 </div>
 <!-- CONTENT -->
