Page's names changed

--- a/src/html/companies-categories-show-groups-list.html
+++ b/src/html/companies-categories-show-groups-list.html
@@ -118,9 +118,9 @@
                 <a class='asd dropdown-toggle' data-toggle='dropdown' href='#'>
                     <img alt='image' class='img-circle' src='https://randomuser.me/api/portraits/med/women/10.jpg'>
                     <span class=''>
-			      <strong class=''>David Williams</strong>
-			      <b class='caret'></b>
-			    </span>
+            <strong class=''>David Williams</strong>
+            <b class='caret'></b>
+          </span>
                 </a>
                 <ul class='dropdown-menu animated'>
                     <li>
@@ -145,30 +145,47 @@
 </div>
 <div class='box_notice'>
 </div>
-<div class='row wrapper'>
-    <div class='col-lg-10'>
-        <h3>Listing Groups</h3>
-        <ol class='breadcrumb'>
-            <li>
-                <a href='/'>Home</a>
-            </li>
-            <li>
-                <a>Groups</a>
-            </li>
-            <li class='active'>
-                <strong>Listing Groups</strong>
-            </li>
-        </ol>
+<!-- APP -->
+<div class='row wrapper backs'>
+    <div class='col-lg-3 go-back'>
+        <i class="fa fa-angle-left"></i>
+        <span>Categories</span>
     </div>
-    <div class='col-lg-2'></div>
+    <div class='col-lg-5 title'>
+        <span>Servers</span>
+    </div>
+    <div class="col-lg-3 pull-right">
+        <a class="btn btn-default btn-danger pull-right " href="#" role="button"><i class="fa fa-times"></i> Delete Category</a>
+        <a class="btn btn-default btn-default pull-right mr_20" role="button" <i class="fa fa-floppy-o"></i> Save</a>
+    </div>
+</div>
+<div class='row wrapper backs-nav'>
+    <div class='col-lg-6 col-lg-offset-3 comp-nav'>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-info"></i>
+                <span>Information</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>Groups</span>
+            </a>
+        </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>New Group</span>
+            </a>
+        </div>
+    </div>
 </div>
 <!-- CONTENT -->
-<div class='wrapper wrapper-content'>
+<div class='wrapper wrapper-content fix-padding-mini-dashs'>
     <div class='row'>
-        <div class='col-lg-10 companies'>
-            <div class=''>
-                <h4>Groups</h4>
-            </div>
+        <div class="col-lg-12 companies">
+            <br>
             <div class="pull-right">
                 <button class="btn btn-default btn-inverse">New Group</button>
             </div>
@@ -187,12 +204,12 @@
 </div>
 <!-- FOOTER -->
 <div class='footer fixed'>
-    <div class='pull-right'>
-        <span class='text-muted' style='margin-right: 20px;'>Dúvidas</span>
-        <span class='text-muted' style='margin-right: 20px;'>Feedback</span>
-        <span class='text-muted'>Contato</span>
+    <div class='pull-right mini-menu'>
+        <a href="#" class='text-muted' style='margin-right: 20px;'>Dúvidas</a>
+        <a class="btn btn-default btn-feeds" href="#" role="button" style="margin-right: 20px;">Feedback</a>
+        <a href="#" class='text-muted'>Contato</a>
     </div>
-    <div>
+    <div class="copys pull-left">
         <span class='text-muted'>Copyright © 2015 Zertico</span>
     </div>
 </div>
