--- a/src/html/companies-categories-show-groups-new.html
+++ b/src/html/companies-categories-show-groups-new.html
@@ -173,6 +173,12 @@
                 <span>Groups</span>
             </a>
         </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>New Group</span>
+            </a>
+        </div>
     </div>
 </div>
 <!-- CONTENT -->
@@ -231,7 +237,7 @@
                         <div class="col-sm-3">
                             <span>Current Icon:</span>
                         </div>
-                        <div class="col-sm-7">
+                        <div class="col-sm-6">
                             <i class="fa fa-cloud"></i>
                         </div>
                         <div class="pull-right">
