--- a/src/html/companies-categories-show.html
+++ b/src/html/companies-categories-show.html
@@ -174,6 +174,12 @@
                 <span>Groups</span>
             </a>
         </div>
+        <div class="comp-nav-item">
+            <a href="#" title="" class="">
+                <i class="fa fa-tags"></i>
+                <span>New Group</span>
+            </a>
+        </div>
     </div>
 </div>
 <!-- CONTENT -->
