Class' name changed

--- a/src/html/companies-categories-show-groups-list.html
+++ b/src/html/companies-categories-show-groups-list.html
@@ -184,18 +184,18 @@
 <!-- CONTENT -->
 <div class='wrapper wrapper-content fix-padding-mini-dashs'>
     <div class='row'>
-        <div class="col-lg-12 companies">
+        <div class="col-lg-12 s-element">
             <br>
             <div class="pull-right">
                 <button class="btn btn-default btn-inverse">New Group</button>
             </div>
             <br>
             <br>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-cloud"></i>
                 <a>Cloud Servers</a>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-cloud"></i>
                 <a>Bare Metal</a>
             </div>
