--- a/src/html/companies-categories.html
+++ b/src/html/companies-categories.html
@@ -165,7 +165,7 @@
 <!-- CONTENT -->
 <div class='wrapper wrapper-content'>
     <div class='row'>
-        <div class='col-lg-10 companies'>
+        <div class='col-lg-10 s-element'>
             <div class=''>
                 <h4>Categories</h4>
             </div>
@@ -174,15 +174,15 @@
             </div>
             <br>
             <br>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <a>Servers</a>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <a>Emais</a>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <a>Office 365</a>
             </div>
