--- a/src/html/companies.html
+++ b/src/html/companies.html
@@ -165,7 +165,7 @@
 <!-- CONTENT -->
 <div class='wrapper wrapper-content'>
     <div class='row'>
-        <div class='col-lg-10 companies'>
+        <div class='col-lg-10 s-element'>
             <div class=''>
                 <h4>Companies</h4>
             </div>
@@ -174,19 +174,19 @@
             </div>
             <br>
             <br>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <span>Foo Inc</span>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <span>Foo Inc</span>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <span>Foo Inc</span>
             </div>
-            <div class="companies-item">
+            <div class="s-element-item">
                 <i class="fa fa-square"></i>
                 <span>Foo Inc</span>
             </div>
